kandula-app-manifests/kandula_deploy.yaml
---
# Creates a deplyoment with kandula pod container

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kandula-app
  namespace: kandula
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kandula-app
  template:
    metadata:
      labels:
        app: kandula-app
    spec:
      serviceAccountName: kandula-sa
      containers:
      - name: kandula-app
        image: 735911875499.dkr.ecr.us-east-1.amazonaws.com/kandula:latest

        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 10          
          periodSeconds: 5
          failureThreshold: 5
        
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 10          
          periodSeconds: 5
          failureThreshold: 5
          
      volumes:
      - persistentVolumeClaim:
          claimName: kandula-pvc
