kandula-app-manifests/kandula-app.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: kandula

---
# Creating a deplyoment with kandula pod container

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kandula-app
  namespace: kandula
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kandula-app
  template:
    metadata:
      labels:
        app: kandula-app
    spec:
      serviceAccountName: kandula-sa
      containers:
      - name: kandula-app
        image: 735911875499.dkr.ecr.us-east-1.amazonaws.com/kandula:latest
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: kandula-service
  namespace: kandula
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: kandula-app


#Exposing the pod to access the app using a web browser

#apiVersion: v1
#kind: Service
#metadata:
#  name: kandula-service
#  namespace: kandula
#spec:
#  type: LoadBalancer
#  ports:
#  - port: 80
#    targetPort: 5000
#    protocol: TCP
#  selector:
#    app: kandula-app
