kandula-app-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: kandula
spec:
  type: ClusterIP
  selector:
    app: kandula-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
