kandula-app-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-kandula
  namespace: kandula
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/enable-external-authorization: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/ssl-cert: "arn:aws:acm:us-east-1:735911875499:certificate/d416be11-bd15-404e-8bf5-a73a8b8e6e10"
spec:
#  ingressClassName: nginx
  rules:
    - host: kandula.dianatop.lat
      http:
        paths:
          - path: "/home"
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
