kandula-app-manifests/kandula-network-policy.yaml
---
#Creates a cnetwork policy for kandula app

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-network-policy
  namespace: kandula
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
#    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: api-pod
        - namespaceSelector:
            matchLabels:
              app: kandula
        - ipBlock:
#            cidr: 10.0.0.0/24
      ports:
        - protocol: TCP
          port: 3306
#  egress:
#    - to:
#        - ipBlock:
#            cidr: 10.0.0.0/24
#      ports:
#        - protocol: TCP
#          port: 5978
